# CS-OnFlyGS

./: .gitignore  .gitmodules  args.py  gaussianviewer.py  local_install.md  requirements.txt  rerun_viz.py  train.py
depth_anything_v2/: __init__.py
fused_ssim/: setup.py  ssim.cu
poses/: guided_mvs.py  pose_initializer.py  ransac.py
scene/: mono_depth.py  scene_model.py
submodules/diff-gaussian-rasterization/: setup.py
submodules/graphdecoviewer/: LICENSE  README.md  pyproject.toml
submodules/graphdecoviewer/src/graphdecoviewer/: __init__.py  types.py
submodules/graphdecoviewer/src/graphdecoviewer/widgets/: __init__.py  ellipsoid_viewer.py  image.py  monitor.py  radio.py
submodules/graphdecoviewer/src/graphdecoviewer/widgets/cameras/: __init__.py  fps.py
submodules/simple-knn/: setup.py
